[gd_scene load_steps=10 format=3 uid="uid://doo45nhquufam"]

[ext_resource type="Script" path="res://Scripts/Minigame/radio.gd" id="1_htqji"]
[ext_resource type="Texture2D" uid="uid://dn4mm35gpxhx0" path="res://Assets/MiniJeux/Radio/FondRadio.png" id="2_qesvt"]
[ext_resource type="Texture2D" uid="uid://nx10dcdf7jbt" path="res://Assets/MiniJeux/Radio/button 2 off.png" id="3_ujk3i"]
[ext_resource type="Texture2D" uid="uid://q6cbd1y1gmwt" path="res://Assets/MiniJeux/Radio/button 1 off.png" id="4_u8jbl"]
[ext_resource type="Texture2D" uid="uid://y154mxu328vm" path="res://Assets/MiniJeux/Radio/cursor.png" id="5_26r1f"]
[ext_resource type="Script" path="res://addons/MultiTouchGui/MultiTouchButton.gd" id="6_jkhgu"]
[ext_resource type="FontFile" uid="uid://b0dbw7daavhnt" path="res://Assets/Font/OffBitTrial-101Bold.ttf" id="6_t7u1h"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ojhat"]

[sub_resource type="LabelSettings" id="LabelSettings_j7uc6"]
font = ExtResource("6_t7u1h")
font_size = 47

[node name="RadioMinigame" type="Node2D"]
script = ExtResource("1_htqji")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_qesvt")
centered = false

[node name="HzSlider" type="HSlider" parent="."]
z_index = 2
offset_left = 197.0
offset_top = 420.0
offset_right = 511.0
offset_bottom = 436.0
theme_override_icons/grabber_disabled = ExtResource("5_26r1f")
theme_override_styles/slider = SubResource("StyleBoxTexture_ojhat")
min_value = 300.0
max_value = 900.0
value = 600.0
rounded = true
editable = false
scrollable = false
metadata/_edit_use_anchors_ = true

[node name="HzLabel" type="Label" parent="."]
z_index = 2
offset_left = 68.0
offset_top = 301.0
offset_right = 214.0
offset_bottom = 353.0
text = "600 Hz"
label_settings = SubResource("LabelSettings_j7uc6")
metadata/_edit_use_anchors_ = true

[node name="LeftRadio" type="Button" parent="."]
z_index = 2
offset_left = 40.0001
offset_top = 476.0
offset_right = 130.0
offset_bottom = 558.0
scale = Vector2(1.3, 1.3)
focus_mode = 0
action_mode = 0
icon = ExtResource("4_u8jbl")
flat = true
expand_icon = true
script = ExtResource("6_jkhgu")
icon_normal = ExtResource("4_u8jbl")

[node name="RightRadio" type="Button" parent="."]
z_index = 2
offset_left = 523.0
offset_top = 476.0
offset_right = 613.0
offset_bottom = 558.0
scale = Vector2(1.3, 1.3)
focus_mode = 0
action_mode = 0
icon = ExtResource("3_ujk3i")
flat = true
expand_icon = true
script = ExtResource("6_jkhgu")
icon_normal = ExtResource("3_ujk3i")
